<resources>
    <string name="app_name">TeamManager</string>
    <string name="loginLabetTV_text">LOGIN</string>
    <string name="loginEmailET_hint">Enter email address</string>
    <string name="loginSentBtn_text">SEND</string>
    <string name="loginRegisterBtn">Register</string>
    <string name="registerLabelTV_text">REGISTER</string>
    <string name="registerEmailET_hint">Enter email address</string>
    <string name="registerPasswordET_hint">Enter password</string>
    <string name="registerRePasswordET_hint">Enter password again</string>
    <string name="registerSendBtn_text">SEND</string>
    <string name="baseLogoutBtn_text">LOGOUT</string>
    <string name="passwordMissmatchMessage">Passwords don\'t match</string>
    <string name="baseBottomNav_personnel_title">PERSONNEL</string>
    <string name="baseBottomNav_tasks_title">TASKS</string>
    <string name="baseBottomNav_schedule_title">SCHEDULE</string>
    <string name="baseOptionsMenu_logout_title">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baseBottomNav_home_title">HOME</string>
    <string name="baseOptionsMenu_deleteAccount_title">Delete account</string>
    <string name="personnelAddEmployeeBtn_text">Add employee</string>
    <string name="addNewEmplTitle_text">NEW EMPLOYEE</string>
    <string name="addNewEmplNameET_hint">Name</string>
    <string name="addNewEmplLastNameET_hint">Last name</string>
    <string name="addNewEmplAddBtn_text">ADD</string>
    <string name="editEmployeeTitleTV_text">Editing employee:</string>
    <string name="editEmployeeNameTV_text">Sample Name</string>
    <string name="editEmployeeNameET_hint">Name</string>
    <string name="editEmployeeLastNameET_hint">Last name</string>
    <string name="editEmployeeAddBtn_text">Save</string>
    <string name="singleEmployeeDetailsTitleNameTV_text">SAMPLE NAME</string>
    <string name="singleEmployeeDetailsNameTV_text">Name</string>
    <string name="singleEmployeeDetailsLastNameTV_text">Lastname</string>
</resources>
