<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <TextView
        android:id="@+id/loginLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLabetTV_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <EditText
        android:id="@+id/loginEmailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/loginEmailET_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/loginLabelTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        tools:layout_editor_absoluteX="0dp"/>
    <EditText
        android:id="@+id/loginPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/loginEmailET_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/loginEmailET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        tools:layout_editor_absoluteX="0dp"/>
    <Button
        android:id="@+id/loginSendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginSentBtn_text"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordET"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/loginRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginRegisterBtn"
        app:layout_constraintTop_toBottomOf="@id/loginSendBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/loginFailureMessageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginRegisterBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/holo_red_dark"
        android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>