<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.base.SingleEmployeeDetailsFragment">
    <TextView
        android:id="@+id/singleEmployeeDetailsTitleNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleEmployeeDetailsTitleNameTV_text"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>


    <TextView
        android:id="@+id/singleEmployeeDetailsNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleEmployeeDetailsNameTV_text"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/singleEmployeeDetailsTitleNameTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="30dp"/>
    <Button
        android:id="@+id/singleEmployeeDetailsNameEditBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/singleEmployeeDetailsNameTV"
        app:layout_constraintLeft_toRightOf="@id/singleEmployeeDetailsNameTV"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/singleEmployeeDetailsNameET"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/singleEmployeeDetailsTitleNameTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="30dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/singleEmployeeDetailsNameSaveBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_save"
        app:layout_constraintLeft_toRightOf="@id/singleEmployeeDetailsNameET"
        app:layout_constraintTop_toTopOf="@id/singleEmployeeDetailsNameET"
        android:layout_marginStart="10dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/singleEmployeeDetailsNameCancelBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_cancel"
        app:layout_constraintLeft_toRightOf="@id/singleEmployeeDetailsNameSaveBtn"
        app:layout_constraintTop_toTopOf="@id/singleEmployeeDetailsNameET"
        android:layout_marginStart="10dp"
        android:visibility="gone"/>



    <TextView
        android:id="@+id/singleEmployeeDetailsLastNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleEmployeeDetailsLastNameTV_text"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/singleEmployeeDetailsTitleNameTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="130dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="30dp"/>
    <Button
        android:id="@+id/singleEmployeeDetailsLastNameEditBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/singleEmployeeDetailsLastNameTV"
        app:layout_constraintLeft_toRightOf="@id/singleEmployeeDetailsLastNameTV"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/singleEmployeeDetailsLastNameET"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/singleEmployeeDetailsTitleNameTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="130dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="30dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/singleEmployeeDetailsLastNameSaveBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_save"
        app:layout_constraintLeft_toRightOf="@id/singleEmployeeDetailsLastNameET"
        app:layout_constraintTop_toTopOf="@id/singleEmployeeDetailsLastNameET"
        android:layout_marginStart="10dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/singleEmployeeDetailsLastNameCancelBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_cancel"
        app:layout_constraintLeft_toRightOf="@id/singleEmployeeDetailsLastNameSaveBtn"
        app:layout_constraintTop_toTopOf="@id/singleEmployeeDetailsLastNameET"
        android:layout_marginStart="10dp"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>